--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.vinay</groupId>
-	<artifactId>mongoDemo</artifactId>
+	<artifactId>mongo-app</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<dependencies>
